--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>verlox</title>
+  <title>tears</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,13 +40,13 @@
       aud.play();
 
       var typed = new Typed("#typing", {
-        strings: ["destroying kids dreams since 2017", "lithium owns you", "lithium owner", "reaping rewards", "professional kpop destroyer", "discord terminated", "verlox#0001"],
+        strings: ["discord god since 06", "hells owns you", "hells owner", "extorting your sister", "professional skid", "ur unloved", "tears#1111"],
         typeSpeed: 30,
         backspeed: 20,
         showCursor: false
       });
 
-      var lines = ["discord.gg/lith", "discord terminated", "github.com/verlox"];
+      var lines = ["discord.gg/hells", "join discord", "tiktok.com/@pookietears"];
       for (var x = 0;x < lines.length;x++)
         $("#marquee").append(`${lines[x]}${(x < lines.length - 1? ' <img class="emoji" src="/assets/images/seperator.png"> ' : '')}`);
 
