--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       aud.play();
 
       var typed = new Typed("#typing", {
-        strings: ["discord god since 06", "hells owns you", "hells owner", "extorting your sister", "professional skid", "ur unloved", "tears#1111"],
+        strings: ["discord god since 06", "/hells owns you", "/hells owner", "extorting your sister", "professional skid", "ur unloved", "tears#1111"],
         typeSpeed: 30,
         backspeed: 20,
         showCursor: false
